istio-teaching/envoyfilters/match/ef-match-cluster-subset.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: match
spec:
  workloadSelector:
    labels:
      app: productpage
  configPatches:  
  - applyTo: CLUSTER
    match:
      cluster:
        portNumber: 9080
        service: productpage.istio.svc.cluster.local
        subset: v1
    patch:
      operation: MERGE
      value: 
        connect_timeout: 115s
