istio-teaching/envoyfilters/match/ef-match-listener-name.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: match
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: LISTENER
    match:
      listener:
        name: 0.0.0.0_8080
    patch:
      operation: MERGE
      value:
        listener_filters:
        - name: envoy.filters.listener.original_src
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.original_src.v3.OriginalSrc
        - name: envoy.filters.listener.tls_inspector
