istio-teaching/envoyfilters/match/ef-match-routeConfiguration-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: match
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: VIRTUAL_HOST
    match:
      context: GATEWAY
      routeConfiguration:
        #portName: http
        gateway: bookinfo-gateway
        #name: "http.80"
    patch:
      operation: MERGE
      value:
            name: "test"
            domains:
            - "*"
            routes:
            - match:
                prefix: "/"
              direct_response:
                status: 200
                body:
                  inline_string: "example body\n"
