istio-teaching/envoyfilters/match/ef-match-routeConfiguration-name.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: match
spec:
  workloadSelector:
    labels:
      app: productpage
  configPatches:
    - applyTo: HTTP_ROUTE
      match:
        context: SIDECAR_INBOUND
        routeConfiguration:
          name: inbound|9080||
      patch:
        operation: MERGE
        value:
          match:
            prefix: /
          direct_response:
                status: 200
                body:
                  inline_string: "example body44n"
