istio-teaching/envoyfilters/match/ef-match-routeConfiguration-portName-https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: match
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: VIRTUAL_HOST
    match:
      context: GATEWAY
      routeConfiguration:
        portName: https
    #    gateway: istio/bookinfo-gateway
    patch:
      operation: MERGE
      value:
            name: "mytest:443"
            domains:
            - "mytest.com"
            routes:
            - match:
                prefix: "/"
              direct_response:
                status: 200
                body:
                  inline_string: "example body\n"
