istio-teaching/envoyfilters/match/ef-match-routeConfiguration-portNumber.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: match
spec:
  workloadSelector:
    labels:
      app: productpage
  configPatches:
  - applyTo: VIRTUAL_HOST
    match:
      context: SIDECAR_INBOUND
      routeConfiguration:
        portNumber: 9080
        vhost:
          name: inbound|http|9080
    patch:
      operation: REMOVE
  - applyTo: VIRTUAL_HOST
    match:
      context: SIDECAR_INBOUND
      routeConfiguration:
        portNumber: 9080
    patch:
      operation: ADD
      value:
            name: inbound|http|9080
            domains:
            - "*"
            routes:
            - match:
                prefix: "/"
              direct_response:
                status: 200
                body:
                  inline_string: "example body\n"
