istio-teaching/envoyfilters/match/ef-match-routeConfiguration-vhost-route-action-REDIRECT-2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: match-2
spec:
  workloadSelector:
    labels:
      app: productpage
  configPatches:
    - applyTo: HTTP_ROUTE
      match:
        context: SIDECAR_INBOUND
        routeConfiguration:
          portNumber: 9080
          vhost:
            name: inbound|http|9080
            route:
              action: REDIRECT
      patch:
        operation: MERGE
        value:
          match:
            prefix: /
          direct_response:
                status: 200
                body:
                  inline_string: "example body11\n"
